ignore some local stuff

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ result-*
 /pkgs/development/libraries/qt-5/*/tmp/
 /pkgs/desktops/kde-5/*/tmp/
 /pkgs/development/mobile/androidenv/xml/*
+.bundle
+bisects
+debugs
+updates
